# otto_vec

./: .gitignore  Cargo.toml  README.md
otto_vec/: Cargo.toml
otto_vec/src/: lib.rs
otto_vec_derive/: Cargo.toml
otto_vec_derive/src/: builder.rs  lib.rs  otto_vec.rs  util.rs
otto_vec_testbed/: Cargo.toml
otto_vec_testbed/src/: functions.rs  main.rs  tests.rs
