[package]
name = "otto_vec_derive"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.0"
