[package]
name = "otto_vec_derive"
version = "0.1.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The back-end for otto_derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.42", features = ["extra-traits", "full"] }
quote = "1.0.7"
proc-macro2 = "1.0.23"
